--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ body {
   margin-bottom: 1200px;
 }
 
-.btn-1 {
+.btn-1,
+.btn-2 {
   padding: 10px 20px;
   background-color: #ffffff;
   color: #000000;
@@ -39,11 +40,22 @@ body {
   display: block;
   box-shadow: 0 0 10px #00000030;
   transition: 0.3s;
+  max-width: max-content;
+}
+
+.btn-2 {
+  color: #ffffff;
+  background-color: #000000;
 }
 
 .btn-1:hover {
   background-color: #000000;
   color: #ffffff;
+}
+
+.btn-2:hover {
+  color: #000000;
+  background-color: #ffffff;
 }
 
 .title {
@@ -56,6 +68,39 @@ body {
   font-family: var(--inter);
   font-size: 24px;
   line-height: 1.5;
+}
+
+.subtitulo {
+  font-family: var(--inter);
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #e98ead;
+}
+
+@media (max-width: 1000px) {
+  .title {
+    font-size: 32px;
+  }
+  .text {
+    font-size: 18px;
+    line-height: 1.2;
+  }
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 24px;
+  }
+  .text {
+    font-size: 16px;
+    line-height: 1;
+  }
+  .btn-1,
+  .btn-2 {
+    font-size: 16px;
+    padding: 8px 16px;
+  }
 }
 
 /* //////////////////////////////////////GERAIS ↑↑↑↑↑↑↑↑ */
@@ -71,9 +116,10 @@ body {
 .nav-container {
   display: flex;
   justify-content: space-between;
-  max-width: 1260px;
+
   margin: 0 auto;
   flex-wrap: wrap;
+  max-width: 1340px;
 }
 
 .logo {
@@ -117,10 +163,27 @@ body {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
+  .logo {
+    max-width: 30%;
+  }
+
+  .nav-container {
+    gap: 10px;
+  }
+
+  .nav-header {
+    padding: 10px 20px;
+  }
+
   .nav-itens {
     flex-direction: column;
     gap: 0;
+  }
+
+  .nav-itens .btn-1 {
+    position: absolute;
+    top: 90vh;
   }
 
   .nav-list {
@@ -129,6 +192,7 @@ body {
 
   .nav-list a {
     padding: 10px 0;
+    font-size: 16px;
   }
 }
 
@@ -136,23 +200,13 @@ body {
 
 #header {
   background-color: #0a2647;
-  padding-top: 142px;
-  padding-bottom: 240px;
-  align-items: center;
-  gap: 32px;
   position: relative;
+  padding: 232px 60px 112px 60px;
 }
 
-.header-title {
-  max-width: 1280px;
+.header-container {
+  max-width: 1340px;
   margin: 0 auto;
-}
-
-.img-intro {
-  position: absolute;
-  right: 0;
-  top: 142px;
-  z-index: 0;
 }
 
 h1 {
@@ -163,22 +217,78 @@ h1 {
   margin-bottom: 60px;
 }
 
-.header-text {
-  width: 100%;
-  bottom: 112px;
-  z-index: 5;
-}
-
-.header-text div {
-  padding: 54px 72px;
-  background-color: #e98ead;
-  max-width: 1280px;
+.header-intro {
   margin: 0 auto;
-  z-index: 5;
+  background-color: #e98ead;
+  padding: 54px 72px;
 }
 
-.header-text h2 {
+.header-intro .title {
   margin-bottom: 18px;
 }
 
+@media (max-width: 1000px) {
+  #header {
+    padding: 232px 20px 112px 20px;
+  }
+  h1 {
+    font-size: 72px;
+  }
+
+  .header-intro {
+    padding: 27px 36px;
+  }
+}
+
+@media (max-width: 768px) {
+  #header {
+    padding: 116px 0 61px 0;
+  }
+  h1 {
+    font-size: 36px;
+    padding-left: 20px;
+    margin-bottom: 30px;
+  }
+
+  .header-intro {
+    padding: 20px;
+  }
+}
+
 /* //////////////////////////////////////HEADER  ↑↑↑↑↑↑↑↑ */
+
+#about {
+  padding: 220px 0 132px 0;
+  text-align: center;
+  background-color: #f6f5f1;
+}
+
+.about-container {
+  max-width: 960px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin: 0 auto;
+  align-items: center;
+}
+
+@media (max-width: 1000px) {
+  #about {
+    padding: 60px 0;
+  }
+  .about-container {
+    padding: 0 20px;
+    gap: 20px;
+  }
+}
+
+/* //////////////////////////////////////ABOUT  ↑↑↑↑↑↑↑↑ */
+
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+@media (max-width: 1000px) {
+}
