--- a/style.css
+++ b/style.css
@@ -285,10 +285,108 @@ h1 {
 
 /* //////////////////////////////////////ABOUT  ↑↑↑↑↑↑↑↑ */
 
+#services {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  background-color: #0a2647;
+  color: #ffffff;
+  gap: 80px;
+  align-items: center;
+  box-shadow: inset 0 80px 0 #f6f5f1;
+  padding-right: 60px;
+}
+
+.services-content {
+  padding: 110px 0;
+  padding-top: 190px;
+  flex-shrink: 0;
+}
+
+.services-img {
+  height: 100%;
+}
+
+.services-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.services-content,
+.services-list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.services-list {
+  padding-left: 20px;
+}
+.services-list li {
+  list-style: initial;
+  font-family: var(--inter);
+}
+
+@media (max-width: 1000px) {
+  #services {
+    gap: 40px;
+    grid-template-columns: 1fr;
+    padding: 0;
+  }
+
+  .services-content {
+    padding: 60px;
+  }
+
+  .services-content,
+  .services-list {
+    gap: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .services-content {
+    padding: 60px 20px;
+  }
+}
+
+/* //////////////////////////////////////SERVICES  ↑↑↑↑↑↑↑↑ */
+
+#study {
+  background-color: #f6f5f1;
+  box-shadow: inset 0 -68px 0 #ffffff;
+  display: grid;
+}
+
+.study-container {
+  max-width: 1280px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 0 40px;
+  padding-bottom: 40px;
+}
+
+.study-text {
+  padding-top: 160px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.img-study {
+  padding-top: 224px;
+}
+
+/* //////////////////////////////////////STUDY  ↑↑↑↑↑↑↑↑ */
 /*  */
 /*  */
 /*  */
 /*  */
 /*  */
 @media (max-width: 1000px) {
+}
+
+@media (max-width: 768px) {
 }
