--- a/style.css
+++ b/style.css
@@ -24,10 +24,6 @@ img {
   display: block;
 }
 
-body {
-  margin-bottom: 1200px;
-}
-
 .btn-1,
 .btn-2 {
   padding: 10px 20px;
@@ -345,6 +341,9 @@ h1 {
 }
 
 @media (max-width: 768px) {
+  #services {
+    gap: 0;
+  }
   .services-content {
     padding: 60px 20px;
   }
@@ -355,7 +354,6 @@ h1 {
 #study {
   background-color: #f6f5f1;
   box-shadow: inset 0 -68px 0 #ffffff;
-  display: grid;
 }
 
 .study-container {
@@ -365,11 +363,11 @@ h1 {
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   padding: 0 40px;
-  padding-bottom: 40px;
 }
 
 .study-text {
   padding-top: 160px;
+  padding-bottom: 92px;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -377,9 +375,178 @@ h1 {
 
 .img-study {
   padding-top: 224px;
+  height: 100%;
+}
+
+.img-study img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .study-container {
+    grid-template-columns: 1fr;
+    padding: 60px 0;
+    padding-bottom: 0;
+    gap: 0;
+    box-shadow: none;
+  }
+
+  .study-text {
+    padding: 0;
+    margin-bottom: 40px;
+    padding: 0 20px;
+    gap: 20px;
+  }
+
+  .img-study {
+    padding: 0;
+  }
 }
 
 /* //////////////////////////////////////STUDY  ↑↑↑↑↑↑↑↑ */
+
+.faqs-container {
+  padding-top: 114px;
+  padding-bottom: 160px;
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+
+.questions {
+  width: 100%;
+}
+
+.questions dt {
+  padding: 40px 0;
+  display: block;
+  position: relative;
+  cursor: pointer;
+}
+
+.questions dt::after {
+  content: "";
+  height: 40px;
+  width: 40px;
+  box-shadow: 0 0 10px #00000030;
+  border-radius: 50%;
+  background-image: url(./icones/arrow.svg);
+  background-position: center;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.line {
+  height: 1px;
+  width: 100%;
+  display: block;
+  background-color: #82aae3;
+  opacity: 0.3;
+}
+
+.questions dd {
+  display: none;
+  padding-bottom: 40px;
+}
+
+@media (max-width: 1000px) {
+  .faqs-container {
+    padding: 114px 20px 160px 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .faqs-container {
+    padding: 60px 20px;
+    gap: 20px;
+  }
+}
+
+/* //////////////////////////////////////FAQs  ↑↑↑↑↑↑↑↑ */
+#contact {
+  background: url(./imagens/image-contact.jpg) no-repeat;
+}
+.contact-box {
+  margin-left: 120px;
+  padding-top: 520px;
+}
+.contact-content {
+  padding: 54px 72px;
+  max-width: 830px;
+  background-color: #e98ead;
+}
+
+.contact-content .title {
+  margin-bottom: 18px;
+}
+
+.contact-content .text {
+  margin-bottom: 48px;
+}
+
+#email {
+  font-family: var(--inter);
+  font-size: 24px;
+  padding: 16px 48px;
+  border: none;
+  border-radius: 100px 0 0 100px;
+}
+
+button {
+  font-family: var(--inter);
+  padding: 16px 48px;
+  border-radius: 0 100px 100px 0;
+  font-size: 24px;
+  border: none;
+  font-weight: 700;
+  background-color: #0a2647;
+  color: #ffffff;
+  position: relative;
+  right: 4px;
+}
+
+@media (max-width: 1000px) {
+  .contact-box {
+    margin: 0 auto;
+  }
+  .contact-content {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 768px) {
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact-box {
+    padding-top: 0;
+  }
+  .contact-content {
+    padding: 60px 20px;
+  }
+  #email {
+    border-radius: 100px;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+  button {
+    border-radius: 100px;
+  }
+}
+
+/* //////////////////////////////////////CONTACT  ↑↑↑↑↑↑↑↑ */
+
+/*  */
 /*  */
 /*  */
 /*  */
