--- a/style.css
+++ b/style.css
@@ -472,7 +472,10 @@ h1 {
 
 /* //////////////////////////////////////FAQs  ↑↑↑↑↑↑↑↑ */
 #contact {
-  background: url(./imagens/image-contact.jpg) no-repeat;
+  background-image: url(./imagens/image-contact.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 -123px 0 #0a2647;
 }
 .contact-box {
   margin-left: 120px;
@@ -545,6 +548,18 @@ button {
 }
 
 /* //////////////////////////////////////CONTACT  ↑↑↑↑↑↑↑↑ */
+
+footer {
+  padding: 40px;
+  background-color: #0a2647;
+}
+
+footer p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  text-align: center;
+  color: #ffffff;
+}
 
 /*  */
 /*  */
